# llama2-rag-dnd

./: lab.ipynb  pyproject.toml
